# PhaBOX

./: .gitignore  Cherry.py  Cherry_single.py  Components of the PhaSUIT.md  LICENSE.md  PhaGCN.py  PhaGCN_single.py  PhaMer.py  PhaMer_single.py  PhaTYP.py  PhaTYP_single.py  README(main page).md  README.md  bioconda_recipes.yaml  cherry.py  contamination.py  draw.py  draw_figures.py  draw_network.py  environment.yml  init_script.py  main.py  meta.yaml  phabox2  phabox2.py  phabox2.yaml  phagcn.py  phamer.py  phatyp.py  pyproject.toml  requirements.txt  setup.py  test_contigs.fa  webserver.yml
.github/workflows/: python-package-conda.yml
GTDB/: README.md  cherry_prediction(example).csv  cherry_prediction_gtdb_ver(example).csv  convert_refseq_gtdb.py
ICTV_challenge/: MSL39v4_valid_names_per_taxa.json  README.md  convert_original_results_to_temperate_format.py  validate_entries.py
imgs/: README.md
models/: phamer.py
phabox2/: contamination.py  phatyp.py
plot_script/: .Rhistory  generate_network.R
scripts/: cnnscript.py  data.py  preprocessing.py  ulity.py
src/phabox2/: __init__.py  cherry.py  contamination.py  phabox2.py  phagcn.py  phamer.py  phatyp.py  phavip.py  tree.py  votu.py
src/phabox2/models/: CAPCNN.py  Cherry.py  PhaGCN.py  config.py
src/phabox2/scripts/: blastxml_to_tabular.py  cnnscript.py  multimodal.py  parallel_prodigal_gv.py  preprocessing.py  ulity.py
