[project]
name = "phabox2"
authors = [
    {name = "Stephen Nayfach", email = "jiayushang@cuhk.edu.hk"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: AFL License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dynamic = ["version"]


[project.scripts]
hello-world = "phabox2:main"